--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,8 +6,11 @@
     </head>
     <body>
         <h1><em>Lasagna</em></h1>
-        <img src = "../pictures/istockphoto-535851351-612x612.jpeg" alt = "Lasagna">
+        <img src = "../pictures/lasagna.jpeg" alt = "Lasagna"
+                    width="400"
+                    height="400">
         <h3>Description</h3>
+        <p>Takes a little work, but it is worth it.</p>
         <h3>Ingredients</h3>
         <ul>
             <li>1 pound sweet Italian sausage</li>
@@ -32,5 +35,22 @@
             <li>¾ cup grated Parmesan cheese</li>
         </ul>
         <h3>Steps</h3>
+        <ol>
+            <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. 
+                Stir in crushed tomatoes, tomato paste, tomato sauce, and water. 
+                Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. 
+                Simmer, covered, for about 1 1/2 hours, stirring occasionally.</li><br>
+            <li>Bring a large pot of lightly salted water to a boil. 
+                Cook lasagna noodles in boiling water for 8 to 10 minutes. 
+                Drain noodles, and rinse with cold water. 
+                In a mixing bowl, combine ricotta cheese with egg, remaining parsley, and 1/2 teaspoon salt.</li><br>
+            <li>Preheat oven to 375 degrees F (190 degrees C).</li><br>
+            <li>To assemble, spread 1 1/2 cups of meat sauce in the bottom of a 9x13-inch baking dish. 
+                Arrange 6 noodles lengthwise over meat sauce. Spread with one half of the ricotta cheese mixture. 
+                Top with a third of mozzarella cheese slices. Spoon 1 1/2 cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese. 
+                Repeat layers, and top with remaining mozzarella and Parmesan cheese. 
+                Cover with foil: to prevent sticking, either spray foil with cooking spray, or make sure the foil does not touch the cheese.</li><br>
+            <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes. Cool for 15 minutes before serving.</li><br>
+        </ol>
     </body>
 </html>
