--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
         <li> <a href = "./recipes/lasagna.html">Lasagna</a></li>
         <li> <a href = "./recipes/mongolian-beef.html">Mongolian Beef</a></li>
+        <li> <a href = "./recipes/pancakes.html">Pancakes</a></li>
         </ul>
     </body>
 </html>
