--- a/recipes/mongolian-beef.html
+++ b/recipes/mongolian-beef.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel = "stylesheet" href = "../style.css">
     </head>
     <body>
-        <h1>Mongolian Beef</h1>
+        <h1 class = "recipe-name">Mongolian Beef</h1>
         <img src = "../pictures/mongolian-beef.jpeg" alt = "Mongolian Beef"
-            wigth = "400"
-            height = "400">
+                    width="400"
+                    height="auto">
         <h3>Description</h3>
-        <p>A soy-based Chinese-style beef dish. Best served over soft rice noodles or rice.</p>
+        <p class = "description">A soy-based Chinese-style beef dish. Best served over soft rice noodles or rice.</p>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class = "ingredients">
             <li>2 teaspoons vegetable oil</li>
             <li>1 tablespoon finely chopped garlic</li>
             <li>½ teaspoon grated fresh ginger root</li>
@@ -24,7 +25,7 @@
             <li>1 cup vegetable oil for frying</li>
             <li>2 bunches green onions, cut in 2-inch lengths</li>
         </ul>
-        <h3>Steps</h3>
+        <h3 class = "steps">Steps</h3>
         <ol>
             <li>Heat 2 teaspoons of vegetable oil in a saucepan over medium heat, 
                 and cook and stir the garlic and ginger until they release their fragrance, 
