--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang = "en">
     <head>
         <meta charset = "utf-8">
-        <title>Odin Recipes 2</title>
+        <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css"> 
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <ul class = "recipe-list">
         <li> <a href = "./recipes/lasagna.html">Lasagna</a></li>
         <li> <a href = "./recipes/mongolian-beef.html">Mongolian Beef</a></li>
         <li> <a href = "./recipes/pancakes.html">Pancakes</a></li>
