--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset ="utf-8">
         <title>Odin Recipes</title>
+        <link rel = "stylesheet" href = "../style.css">
     </head>
     <body>
-        <h1><em>Lasagna</em></h1>
+        <h1 class = "recipe-name">Lasagna</h1>
         <img src = "../pictures/lasagna.jpeg" alt = "Lasagna"
                     width="400"
-                    height="400">
+                    height="auto">
         <h3>Description</h3>
-        <p>Takes a little work, but it is worth it.</p>
+        <p class = "description">Takes a little work, but it is worth it.</p>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class = "ingredients">
             <li>1 pound sweet Italian sausage</li>
             <li>¾ pound lean ground beef</li>
             <li>½ cup minced onion</li>
@@ -35,7 +36,7 @@
             <li>¾ cup grated Parmesan cheese</li>
         </ul>
         <h3>Steps</h3>
-        <ol>
+        <ol class = "steps">
             <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. 
                 Stir in crushed tomatoes, tomato paste, tomato sauce, and water. 
                 Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. 
