--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel = "stylesheet" href = "../style.css">
     </head>
     <body>
-        <h1>Mongolian Beef</h1>
+        <h1 class = "recipe-name">Pancakes</h1>
         <img src = "../pictures/pancakes.webp" alt = "Pancakes"
             width = "400"
-            height = "400">
+            height = "auto">
         <h3>Description</h3>
-        <p>Makes about 10 pancakes.</p>
+        <p class = "description">Makes about 10 pancakes.</p>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class = "ingredients">
             <li>1½ cups all-purpose flour</li>
             <li>1¼ cups milk</li>
             <li>1 egg</li>
@@ -22,7 +23,7 @@
             <li>1 teaspoon salt</li>
         </ul>
         <h3>Steps</h3>
-        <ol>
+        <ol class = "steps">
             <li>Mix flour, milk, egg, butter, sugar, baking powder, and salt together.</li><br>
             <li>Heat a lightly oiled griddle over low heat. 
                 Scoop 1/4 cup batter onto the griddle and cook until top and edges are dry, 3 to 4 minutes. 
