--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul class = "recipe-list">
-        <li> <a href = "./recipes/lasagna.html">Lasagna</a></li>
-        <li> <a href = "./recipes/mongolian-beef.html">Mongolian Beef</a></li>
-        <li> <a href = "./recipes/pancakes.html">Pancakes</a></li>
+        <li> <a href = "./recipes/lasagna.html">Lasagna</a> </li>
+        <li> <a href = "./recipes/mongolian-beef.html">Mongolian Beef</a> </li>
+        <li> <a href = "./recipes/pancakes.html">Pancakes</a> </li>
+        <li> <a href = "./recipes/tomato-soup.html">Tomato Soup</a> </li>
         </ul>
     </body>
 </html>
